# in_progress

./: .devcontainer-lock.json  .devcontainer.json  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SECURITY.md  airflow.Dockerfile  backup_db.sh  docker-compose.yml  lakehouse_main.session.sql  main.py  makefile  minio_example.license  postgres.Dockerfile  postgres.session.sql  pyproject.toml  requirements.txt  requirements_api.txt  requirements_dbt.txt  requirements_ingest.txt  setup_dev_container.sh  trino.session.sql
ETL_modules/: ETL_balancesheet.py  ETL_incomestatement.py  ETL_pipeline.py  configs.py  db_utils.py  stock_processed_sql.py
SQL/: stored_procedure.sql.jinja2  test.sql
config/: metadata.yaml
config_docker/: datasources.yaml  full_promtail_config.txt  loki_config.yaml  loki_default_config_for_reference.txt  vector_config.yaml
infrastructure/: balance_sheet.py  common.py  income_statement.py  infrastructure02.py
ingestion/: data_lake_client.py  fetch_company_list.py  fetch_raw_financial_report.py  generate_data_metadata.py  ingest_fundamental.py  ingest_main.py  ingestion_main.py  ingestion_utils.py  kafka_adapter.py  kafka_producer.py  main.py  producer.py  utils.py
load/: data_lake_client.py  kafka_consumer.py  lakehouse_loader.py  load_main.py  web_serving_loader.py
schema/: producer_schema.py  schema_metadata.py
scripts/: nessie_maintenance.sh  nessie_merge_branch.sh  setup_dev_container.sh
tmp_codegen/: 20260424_074825_silver_historical_quotes.yml  20260424_084844_silver_bl_quarter.yml  (+9 more)
(+519 files in other folders)
