[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "my-qmj-data-pipeline"
version = "1.0.0"
description = "A data pipeline that evaluates Vietnamese stocks using AQR's Quality-Minus-Junk scoring and quantamental factors to identify high-quality investments."
requires-python = ">=3.12"
authors = [
    {name = "Trần Khoa An", email = "tkan123454321@gmail.com"}
]

dependencies = ["astronomer-cosmos==1.14.0"]

[project.optional-dependencies]
ingest = [
    "confluent-kafka==2.13.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "psycopg[binary]==3.3.3",
    "connectorx==0.4.5",
    "apache-airflow-providers-postgres==6.6.3",
    "apache-airflow-providers-trino==6.5.2",
    "apache-airflow-providers-docker==4.5.5",
    "apache-airflow-task-sdk==1.2.0",

    "requests==2.32.5",
    "python-dotenv==1.2.1",
    "PyYAML==6.0.3",
    "pydantic==2.12.5",
    "tenacity==9.1.3",

    "python-json-logger==4.0.0",
    "python-logging-loki==0.3.1",
    "boto3==1.42.42",

    "polars==1.38.1",
    "pyarrow==23.0.0",
    "pyiceberg[s3fs,pyarrow,polars]==0.10.0",

    "fastavro==1.12.1",
    "Cython==3.2.4",
    "trino==0.336.0"
]
dbt = [
    "dbt-trino==1.10.1",
    "dbt-core==1.11.3",
    "elementary-data==0.22.0"
]
dev = [
    "ruff",
    "pytest",
    "sqlfmt==0.0.3",      
    "ipykernel==7.2.0"    
]

[tool.setuptools]
packages = []